gcc/testsuite/rust/rustc/ui/parser/attr-bad-meta-3.rs
#[path() token] // { dg-error "" "" { target *-*-* } }
mod m {}

